--- a/260213/MainWindow.xaml
+++ b/260213/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_260213"
         mc:Ignorable="d"
-        Title="MineSweeper" Height="500" Width="400" ResizeMode="NoResize" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="MineSweeper" Height="500" Width="400" ResizeMode="NoResize">
     <Grid x:Name="map">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
